# SHAMS_LibTemplate

./: .gitignore  CMakeLists.txt  README.md  SHAMS_Lib.code-workspace  library.json
.github/workflows/: cmake-build-and-test.yml
cmake/: ShamsEventConfig.cmake.in  ShamsLibConfig.cmake.in  install_libs.cmake
test/: CMakeLists.txt
